# platform_external_elfutils

./: .gitignore  .mailmap  AUTHORS.sh  Android.bp  Android.mk  CONTRIBUTING  ChangeLog  LICENSE  METADATA  Makefile.am  Makefile.in  NEWS  OWNERS  TODO  ThirdPartyProject.prop  aclocal.m4  android.patch  config-compat-cygwin.h  config-compat-darwin.h  config-compat-freebsd.h  config-compat-linux.h  config.h  config.h.in  config.status  configure  configure.ac  elfutils.spec  post_update.sh  version.h
android/: port.h
autom4te.cache/: output.0  requests  traces.0
backends/: ChangeLog  Makefile.am  aarch64_corenote.c  aarch64_initreg.c  aarch64_retval.c  aarch64_symbol.c  arm_machineflagname.c  hexagon_init.c  hexagon_symbol.c  i386_init.c  libebl_CPU.h  loongarch_init.c  loongarch_reloc.def  loongarch_symbol.c  mips_init.c  riscv_corenote.c  riscv_init.c  riscv_reloc.def  riscv_retval.c  riscv_symbol.c  x86_64_init.c
config/: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  debuginfod.service  debuginfod.sysconfig  elfutils.spec.in  eu.am  libelf.pc.in  mkinstalldirs  profile.csh.in  profile.fish.in  profile.sh.in  upload-release.sh
debuginfod/: .gitignore  ChangeLog  Makefile.am  debuginfod-client.c  debuginfod-find.c  debuginfod.cxx  debuginfod.h  debuginfod.h.in  libdebuginfod.map
doc/: ChangeLog  Makefile  Makefile.am  Makefile.in  debuginfod-client-config.7  debuginfod-find.1  debuginfod.8  debuginfod_find_debuginfo.3  debuginfod_get_headers.3  elfutils.sgml  readelf.1  srcfiles.1
host-darwin-fixup/: AndroidFixup.h  byteswap.h  endian.h  getline.c  libintl.h
host-linux-fixup/: AndroidFixup.h
lib/: Android.bp  ChangeLog  Makefile  Makefile.am  Makefile.in  color.c  dynamicsizehash.c  dynamicsizehash_concurrent.c  error.c  error.h  fixedsizehash.h  printversion.c  printversion.h  system.h  xasprintf.c  xmalloc.c
libasm/: ChangeLog  Makefile  Makefile.am  Makefile.in  asm_align.c  asm_begin.c  asm_end.c  asm_newscn.c  asm_newscn_ingrp.c  asm_newsym.c  disasm_begin.c  libasmP.h
libcpu/: .gitignore  Android.bp  ChangeLog  Makefile  Makefile.am  Makefile.in  bpf_disasm.c  i386_disasm.c  i386_lex.l  i386_parse.y  memory-access.h  mnemonic_preprocess.sh  riscv_disasm.c
libdw/: .gitignore  Android.mk  ChangeLog  Makefile  Makefile.am  Makefile.in  cfi.c  cfi.h  dwarf.h  dwarf_aggregate_size.c  dwarf_arrayorder.c  dwarf_begin.c  dwarf_begin_elf.c  dwarf_bitoffset.c  dwarf_bitsize.c  dwarf_bytesize.c  dwarf_child.c  dwarf_cu_dwp_section_info.c  dwarf_decl_file.c  dwarf_default_lower_bound.c  dwarf_dieoffset.c  dwarf_end.c  dwarf_error.c  dwarf_formblock.c  dwarf_formref_die.c  dwarf_formstring.c  dwarf_frame_register.c  dwarf_getabbrev.c  dwarf_getabbrevattr.c  dwarf_getalt.c  dwarf_getarange_addr.c  dwarf_getarangeinfo.c  dwarf_getaranges.c  dwarf_getattrs.c  dwarf_getcfi.c  dwarf_getfuncs.c  dwarf_getlocation.c  dwarf_getloclist.c  dwarf_getmacros.c  dwarf_getpubnames.c  (+26 more)
libdwelf/: Android.mk  ChangeLog  Makefile.am  dwelf_elf_begin.c  dwelf_elf_e_machine_string.c  dwelf_strtab.c  libdwelf.h
libdwfl/: Android.mk  ChangeLog  Makefile.am  argp-std.c  core-file.c  cu.c  debuginfod-client.c  dwfl_build_id_find_elf.c  dwfl_end.c  dwfl_error.c  dwfl_frame.c  dwfl_frame_regs.c  dwfl_module.c  dwfl_module_build_id.c  dwfl_module_getdwarf.c  dwfl_module_getsrc_file.c  dwfl_report_elf.c  dwfl_segment_report_module.c  elf-from-memory.c  find-debuginfo.c  frame_unwind.c  gzip.c  image-header.c  libdwfl.h  libdwflP.h  link_map.c  linux-core-attach.c  linux-kernel-modules.c  linux-pid-attach.c  offline.c  open.c
libebl/: Android.mk  ChangeLog  Makefile  Makefile.am  Makefile.in  alpha_symbol.c  ebl-hooks.h  eblclosebackend.c  eblcorenote.c  eblcorenotetypename.c  ebldynamictagname.c  eblgstrtab.c  eblobjnote.c  eblobjnotetypename.c  eblopenbackend.c  eblsectiontypename.c  eblstrtab.c  i386_corenote.c  i386_destr.c  i386_init.c  i386_symbol.c  ia64_init.c  ia64_symbol.c  libebl.h  libeblP.h  libebl_i386.h  libebl_i386.map  libebl_ia64.h  libebl_mips.h  libebl_ppc.h  libebl_ppc.map  libebl_ppc64.h  libebl_ppc64.map  libebl_sh.h  libebl_x86_64.h  mips_destr.c  mips_init.c  mips_symbol.c  ppc64_destr.c  ppc64_init.c  (+10 more)
libelf/: Android.bp  Android.mk  ChangeLog  Makefile  Makefile.am  Makefile.in  common.h  elf-knowledge.h  elf.h  elf32_checksum.c  elf32_fsize.c  elf32_getphdr.c  elf32_getshdr.c  elf32_updatefile.c  elf32_updatenull.c  elf32_xlatetof.c  elf32_xlatetom.c  elf_begin.c  elf_compress.c  elf_compress_gnu.c  elf_end.c  elf_error.c  elf_fill.c  elf_getarsym.c  elf_getdata.c  elf_getdata_rawchunk.c  elf_strptr.c  elf_update.c  gelf.h  gelf_getehdr.c  gelf_xlate.c  libelf.h  libelfP.h  nlist.c  version_xlate.h
m4/: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  biarch.m4
patches/: 0001-libdwfl-Make-dwfl_report_offline_memory-work-with-EL.patch  config.h.patch  libdw-check-offset-dwarf_formstring-in-all-cases.patch  libdw-ignore-really-large-discriminator.patch  libdwfl-handle-duplicate-ELFs-when-reporting-archive.patch  libelf-check-decompressed-ZSTD-size.patch
po/: .gitignore  ChangeLog  Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  de.po  elfutils.pot  es.po  fr.po  it.po  ja.po  nl.po  pl.po  ru.po  uk.po  zh_CN.po
src/: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  addr2line.c  ar.c  arlib-argp.c  arlib.c  elfclassify.c  ld.c  (+24 more)
tests/: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  alldts.c  arextract.c  backtrace-data.c  backtrace-subr.sh  backtrace.c  debuginfod-subr.sh  dwarf-getmacros.c  dwfl-bug-fd-leak.c  dwfl-core-noncontig.c  dwfl-proc-attach.c  dwfl-report-offline-memory.c  ecp.c  elf-print-reloc-syms.c  elfcopy.c  elfgetzdata.c  elfstrmerge.c  funcretval_test_struct.c  get-files.c  get-pubnames.c  getphdrnum.c  leb128.c  newfile.c  newscn.c  run-addr2line-C-test.sh  run-addr2line-i-test.sh  run-allfcts.sh  run-allregs.sh  run-ar.sh  run-arextract.sh  run-copymany-be32.sh  run-copymany-be64.sh  run-copymany-le32.sh  run-copymany-le64.sh  run-copymany-sections.sh  run-debuginfod-000-permission.sh  (+63 more)
(+18 files in other folders)
